# binance-spot-controller

./: Cargo.toml  README.md
bins/ctl-md-handler/: Cargo.toml
bins/ctl-md-handler/src/: config.rs  errors.rs  lib.rs  main.rs
bins/ctl-md-subscriber/: Cargo.toml
bins/ctl-md-subscriber/src/: main.rs
bins/ctl-resource-manager/: Cargo.toml
bins/ctl-resource-manager/src/: config.rs  errors.rs  lib.rs  main.rs
configs/market-data/: feedgroups.yaml  hw-resources.yaml  symbolinfo.yaml
configs/resource-manager/: hw-resources.yaml
lib/ctl-core/: Cargo.toml
lib/ctl-core/src/: feedkind.rs
lib/ctl-feed/: Cargo.toml
lib/ctl-feed/src/: group.rs  kind.rs  lib.rs  messages.rs  protocol.rs
lib/ctl-feed/src/parser/: error.rs  mod.rs  parser.rs
lib/ctl-norm/: Cargo.toml
lib/ctl-norm/src/: lib.rs  normalized.rs
lib/ctl-parser/: Cargo.toml
lib/ctl-websocket/: Cargo.toml
lib/ctl-websocket/examples/: combined_streams.rs  list_and_manage_subscriptions.rs  subscribe_depth.rs  subscribe_klines.rs  subscribe_trades.rs
lib/ctl-websocket/src/: error.rs  lib.rs  websocket.rs
lib/ctl-websocket/src/requests/: error.rs  id.rs  mod.rs  request.rs
lib/network/ctl-websocket/: Cargo.toml
scripts/: run_ctl_md_handler.sh  run_ctl_md_subscriber.sh  run_ctl_resource_manager.sh
