[workspace]
members = [
    "bins/ctl-*", 
    "lib/ctl-*"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
authors = ["Rishi Dey Chowdhury <rishi8001100192@gmail.com>"]

[profile.release]
opt-level = 3            # Enable all compiler optimizations.
debug = false            # Do not include any debug info in the binary.
debug-assertions = false # Do not include any debug assertions in the binary.
overflow-checks = false  # Do not check for overflows at runtime.
lto = "fat"              # Perform link time optimizations across all dependencies (overridden).
panic = 'unwind'         # Unwind the stack upon panic.
incremental = false      # Disable incremental compilation.
codegen-units = 1        # Produce a single code generation unit (overridden).
rpath = false            # Disable runtime search path.

[profile.dev]
opt-level = 0            # Disable all compiler optimizations.
debug = true             # Output full debug info in the binary.
debug-assertions = true  # Include debug assertions in the binary.
overflow-checks = true   # Check for overflows at runtime.
lto = "off"              # Disable link time optimization (overridden).
panic = 'unwind'         # Unwind the stack upon panic.
incremental = true       # Incremental build.
codegen-units = 256      # Produce multiple code generation units.
rpath = false            # Disable runtime search path.

[workspace.dependencies]
# external
libc = { version = "0.2" }
walkdir = { version = "2.5.0" }
cfg-if = { version = "1.0.0" }
anyhow = { version = "1.0.89" }
bindgen = { version = "0.72" }
cc = { version = "1.1.21" }
url = { version = "2.5.8" }
reqwest = { version = "0.13.1", features = ["blocking", "json", "query"] }
thiserror = { version = "2.0.17" }
hashbrown = { version = "0.16.1" }
derive_more = { version = "2.1.1", features = ["full"] }
tungstenite = { version = "0.28.0", features = ["native-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149" }

# internal (atomix-core/)

# exchange
atx-feed = { version = "0.1.0", path = "../atomix-core/lib/exchange/atx-feed" }

# network
atx-rest = { version = "0.1.0", path = "../atomix-core/lib/network/atx-rest"}
atx-websocket = { version = "0.1.0", path = "../atomix-core/lib/network/atx-websocket"}

# internal
ctl-feed = { version = "0.1.0", path = "lib/ctl-feed" }
ctl-websocket = { version = "0.1.0", path = "lib/ctl-websocket" }