[package]
name = "ctl-md-handler"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
# external
thiserror = { workspace = true }
hashbrown = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }

# internal (atomix-core/)
# utils
dpdk = { workspace = true }

# exchange
atx-feed = { workspace = true }

# handler
atx-handler = { workspace = true }

# internal
ctl-feed = { workspace = true }
ctl-websocket = { workspace = true }