[package]
name = "ctl-resource-manager"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
# external

# internal (atomix-core/)
# utils
dpdk = { workspace = true }

# exchange
atx-feed = { workspace = true }

# internal
ctl-feed = { workspace = true }
ctl-websocket = { workspace = true }