[package]
name = "ctl-resource-manager"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
# external
serde = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
hashbrown = { workspace = true }

# internal (atomix-core/)

# utils
dpdk = { workspace = true }

# exchange
atx-feed = { workspace = true }

# handler
atx-handler = { workspace = true }

# internal
ctl-feed = { workspace = true }
ctl-websocket = { workspace = true }
ctl-md-handler = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }