[package]
name = "ctl-feed"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
# external

# internal (atomix-core/)
# exchange
atx-feed = { workspace = true }

dpdk = { version = "0.1.0", path = "../../../atomix-core/lib/utils/rust-dpdk/dpdk" }

# internal
ctl-core = { workspace = true }
ctl-websocket = { workspace = true }