[package]
name = "ctl-feed"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
# external
serde_json = { workspace = true }

# internal (atomix-core/)
# exchange
atx-feed = { workspace = true }

dpdk = { version = "0.1.0", path = "../../../atomix-core/lib/utils/rust-dpdk/dpdk" }

# internal
ctl-websocket = { workspace = true }