[package]
name = "ctl-feed"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
# external
dpdk = { workspace = true }
thiserror = { workspace = true }
derive_more = { workspace = true }
serde_json = { workspace = true }

# internal (atomix-core/)
# exchange
atx-feed = { workspace = true }

# internal
ctl-websocket = { workspace = true }