[package]
name = "ctl-websocket"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
# external
thiserror = { workspace = true }
derive_more = { workspace = true }
serde_json = { workspace = true }

# internal (atomix-core/)
# exchange
atx-feed = { workspace = true }

# network
atx-websocket = { workspace = true }

# internal
ctl-feed = { workspace = true }